--- a/app/userattr/usersattr-list.component.html
+++ b/app/userattr/usersattr-list.component.html
@@ -16,7 +16,7 @@
                         <i class="fa fa-square fa-stack-2x"></i>
                         <i class="fa fa-user fa-stack-1x fa-inverse"></i>
                     </span>
-                    <span> - {{ userAttr.userName }}</span>
+                    <span> - {{ userAttr.userName }} | ( {{ userAttr.attribute }} :: {{ userAttr.value }} )</span>
                  </a>
               </ul>
          </div>
