--- a/app/group/group-add.component.html
+++ b/app/group/group-add.component.html
@@ -20,31 +20,31 @@
                       <div class="form-group">
                           <label for="groupName" class="col-sm-2 control-label">Группа</label>
                           <div class="col-sm-10">
-                              <input id="groupName" class="form-control" formControl="groupName" [(ngModel)]="group.groupName" #groupName="ngForm" required minlength="3" maxlength="64" placeholder="NewGroup">             
+                              <input class="form-control" [(ngModel)]="group.groupName" name="groupName" required minlength="3" maxlength="64" placeholder="NewGroup">             
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="attribute" class="col-sm-2 control-label">Атрибут</label>
                           <div class="col-sm-10">
-                              <input id="attribute" class="form-control" formControl="attribute" [(ngModel)]="group.attribute" #attribute="ngForm" required minlength="5" maxlength="64" placeholder="Simultaneous-Use">
+                              <input class="form-control" [(ngModel)]="group.attribute" name="attribute" required minlength="5" maxlength="64" placeholder="Simultaneous-Use">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="op" class="col-sm-2 control-label">Оператор</label>
                           <div class="col-sm-10">
-                              <input id="op" class="form-control" formControl="op" [(ngModel)]="group.op" #op="ngForm" required minlength="1" maxlength="2" placeholder=":=">
+                              <input class="form-control" [(ngModel)]="group.op" name="op" required minlength="1" maxlength="2" placeholder=":=">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="value" class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
-                              <input id="value" class="form-control" formControl="value" [(ngModel)]="group.value" #value="ngForm" required maxlength="253" placeholder="1">
+                              <input class="form-control" [(ngModel)]="group.value" name="value" required maxlength="253" placeholder="1">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="description" class="col-sm-2 control-label">Описание</label>
                           <div class="col-sm-10">
-                              <textarea rows="2" id="description" class="form-control" formControl="description" [(ngModel)]="group.description" #description="ngForm" required maxlength="253" placeholder="Jon Doe from nowhere"></textarea>
+                              <textarea rows="2" class="form-control" [(ngModel)]="group.description" name="description" required maxlength="253" placeholder="Jon Doe from nowhere"></textarea>
                           </div>
                       </div>  
                       <div class="form-group">
