--- a/app/groupattr/groupattr-edit.component.html
+++ b/app/groupattr/groupattr-edit.component.html
@@ -17,28 +17,28 @@
                 <div class="panel-body">
                    <div [hidden]="submitted">
                      <form class="form-horizontal" *ngIf="active" (ngSubmit)="onSubmit()"  #groupAttrEdit="ngForm">
-                      <div class="form-group">
-                          <label for="userName" class="col-sm-2 control-label">Группа</label>
+                       <div class="form-group">
+                          <label for="groupName" class="col-sm-2 control-label">Группа</label>
                           <div class="col-sm-10">
-                              <input id="groupName" class="form-control" formControl="groupName" [(ngModel)]="groupAttr.userName" #userName="ngForm" readonly>             
+                              <input class="form-control" placeholder="{{ groupAttr.groupName }}" readonly>            
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="attribute" class="col-sm-2 control-label">Атрибут</label>
                           <div class="col-sm-10">
-                              <input id="attribute" class="form-control" formControl="attribute" [(ngModel)]="groupAttr.attribute" #attribute="ngForm" required minlength="5" maxlength="64" placeholder="Cleartext-Password">
+                              <input class="form-control" [(ngModel)]="groupAttr.attribute" name="attribute" required minlength="5" maxlength="64" placeholder="Cleartext-Password">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="op" class="col-sm-2 control-label">Оператор</label>
                           <div class="col-sm-10">
-                              <input id="op" class="form-control" formControl="op" [(ngModel)]="groupAttr.op" #op="ngForm" required minlength="1" maxlength="2" placeholder=":=">
+                              <input class="form-control" [(ngModel)]="groupAttr.op" name="op" required minlength="1" maxlength="2" placeholder=":=">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="value" class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
-                              <input id="value" class="form-control" formControl="value" [(ngModel)]="groupAttr.value" #value="ngForm" required minlength="6" maxlength="253" placeholder="mypassword">
+                              <input id="value" class="form-control" [(ngModel)]="groupAttr.value" name="value" required minlength="6" maxlength="253" placeholder="mypassword">
                           </div>
                       </div>  
                       <div class="form-group">
