--- a/app/groupattr/groupsattr-list.component.html
+++ b/app/groupattr/groupsattr-list.component.html
@@ -17,7 +17,7 @@
                                <i class="fa fa-square fa-stack-2x"></i>
                                <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                             </span>
-                            <span> - {{ groupAttr.groupName }}</span>
+                            <span> - {{ groupAttr.groupName }} | ( {{ groupAttr.attribute }} :: {{ groupAttr.value }} )</span>
                          </a>
                       </ul>
                  </div>
