--- a/app/user/user-add.component.html
+++ b/app/user/user-add.component.html
@@ -20,31 +20,31 @@
                       <div class="form-group">
                           <label for="userName" class="col-sm-2 control-label">Пользователь</label>
                           <div class="col-sm-10">
-                              <input id="userName" class="form-control" formControl="userName" [(ngModel)]="user.userName" #userName="ngForm" required minlength="3" maxlength="64" placeholder="Jon">             
+                              <input class="form-control" [(ngModel)]="user.userName" name="userName" required minlength="3" maxlength="64" placeholder="Jon">             
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="attribute" class="col-sm-2 control-label">Атрибут</label>
                           <div class="col-sm-10">
-                              <input id="attribute" class="form-control" formControl="attribute" [(ngModel)]="user.attribute" #attribute="ngForm" required minlength="5" maxlength="64" placeholder="Cleartext-Password">
+                              <input class="form-control" [(ngModel)]="user.attribute" name="attribute" required minlength="5" maxlength="64" placeholder="Cleartext-Password">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="op" class="col-sm-2 control-label">Оператор</label>
                           <div class="col-sm-10">
-                              <input id="op" class="form-control" formControl="op" [(ngModel)]="user.op" #op="ngForm" required minlength="1" maxlength="2" placeholder=":=">
+                              <input class="form-control" [(ngModel)]="user.op" name="op" required maxlength="2" placeholder=":=">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="value" class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
-                              <input id="value" class="form-control" formControl="value" [(ngModel)]="user.value" #value="ngForm" required minlength="6" maxlength="253" placeholder="mypassword">
+                              <input class="form-control" [(ngModel)]="user.value" name="value" required placeholder="mypassword">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="description" class="col-sm-2 control-label">Описание</label>
                           <div class="col-sm-10">
-                              <textarea rows="2" id="description" class="form-control" formControl="description" [(ngModel)]="user.description" #description="ngForm" required maxlength="253" placeholder="Jon Doe from nowhere"></textarea>
+                              <textarea rows="2" class="form-control" [(ngModel)]="user.description" name="description" required minlength="12" maxlength="253" placeholder="Jon Doe from nowhere"></textarea>
                           </div>
                       </div>  
                       <div class="form-group">
