--- a/app/userattr/userattr-add.component.html
+++ b/app/userattr/userattr-add.component.html
@@ -20,7 +20,7 @@
                       <div class="form-group">
                           <label for="userName" class="col-sm-2 control-label">Пользователь</label>
                           <div class="col-sm-10">
-                              <select id="userName" class="form-control" formControl="userName" [(ngModel)]="userAttr.userName" #userName="ngForm" required minlength="3" maxlength="64" placeholder="Jon">
+                              <select class="form-control" [(ngModel)]="userAttr.userName" name="userName" required placeholder="Выберете пользователя...">
                                 <option *ngFor="let user of users" [value]="user.userName">{{ user.userName }}</option>
                               </select>             
                           </div>
@@ -28,21 +28,21 @@
                       <div class="form-group">
                           <label for="attribute" class="col-sm-2 control-label">Атрибут</label>
                           <div class="col-sm-10">
-                              <input id="attribute" class="form-control" formControl="attribute" [(ngModel)]="userAttr.attribute" #attribute="ngForm" required minlength="5" maxlength="64" placeholder="Cleartext-Password">
+                              <input class="form-control" [(ngModel)]="userAttr.attribute" name="attribute" required minlength="5" maxlength="64" placeholder="Cleartext-Password">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="op" class="col-sm-2 control-label">Оператор</label>
                           <div class="col-sm-10">
-                              <input id="op" class="form-control" formControl="op" [(ngModel)]="userAttr.op" #op="ngForm" required minlength="1" maxlength="2" placeholder=":=">
+                              <input class="form-control" [(ngModel)]="userAttr.op" name="op" required maxlength="2" placeholder=":=">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="value" class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
-                              <input id="value" class="form-control" formControl="value" [(ngModel)]="userAttr.value" #value="ngForm" required minlength="6" maxlength="253" placeholder="mypassword">
+                              <input class="form-control" [(ngModel)]="userAttr.value" name="value" required placeholder="mypassword">
                           </div>
-                      </div>  
+                      </div>                         
                       <div class="form-group">
                           <div class="col-sm-offset-2 col-sm-10">
                               <span><button type="button" class="btn btn-default" (click)="clearForm()"><i class="fa fa-eraser fa-lg"></i> очистить</button></span>                   
