--- a/app/useringroup/useringroup-add.component.html
+++ b/app/useringroup/useringroup-add.component.html
@@ -20,7 +20,7 @@
                       <div class="form-group">
                           <label for="userName" class="col-sm-2 control-label">Пользователь</label>
                           <div class="col-sm-10">
-                              <select id="userName" class="form-control" formControl="userName" [(ngModel)]="userInGroup.userName" #userName="ngForm" required minlength="3" maxlength="64" placeholder="Выберете пользователя...">
+                              <select class="form-control" [(ngModel)]="userInGroup.userName" name="userName" required placeholder="Выберете пользователя...">
                                 <option *ngFor="let user of users" [value]="user.userName">{{ user.userName }}</option>
                               </select>             
                           </div>
@@ -28,7 +28,7 @@
                       <div class="form-group">
                           <label for="userName" class="col-sm-2 control-label">Группа</label>
                           <div class="col-sm-10">
-                              <select id="groupName" class="form-control" formControl="groupName" [(ngModel)]="userInGroup.groupName" #groupName="ngForm" required minlength="3" maxlength="64" placeholder="Выберете группу...">
+                              <select class="form-control" [(ngModel)]="userInGroup.groupName" name="groupName" required placeholder="Выберете группу...">
                                 <option *ngFor="let group of groups" [value]="group.groupName">{{ group.groupName }}</option>
                               </select>             
                           </div>
@@ -36,7 +36,7 @@
                       <div class="form-group">
                           <label for="attribute" class="col-sm-2 control-label">Приоритет</label>
                           <div class="col-sm-10">
-                              <input id="priority" class="form-control" formControl="priority" [(ngModel)]="userInGroup.priority" #priority="ngForm" required placeholder="1">
+                              <input class="form-control" [(ngModel)]="userInGroup.priority" name="priority" required placeholder="1">
                           </div>
                       </div>
                       <div class="form-group">
