--- a/app/dashboard/dashboard.component.html
+++ b/app/dashboard/dashboard.component.html
@@ -16,9 +16,9 @@
                      <div class="col-lg-6">
                          <form role="form">
                               <div class="list-group">
-                                 <a href="" [routerLink]="['Users', 'UserAdd']" class="list-group-item">Нового пользователя</a>
-                                 <a href="" [routerLink]="['Groups', 'GroupAdd']" class="list-group-item">Новую группу</a>
-                                 <a href="" [routerLink]="['Nases', 'NasAdd']" class="list-group-item">Новое устройство</a>
+                                 <a routerLink="/users/useradd" class="list-group-item">Нового пользователя</a>
+                                 <a routerLink="/groups/groupadd" class="list-group-item">Новую группу</a>
+                                 <a routerLink="/nases/nasadd" class="list-group-item">Новое устройство</a>
                               </div>
                           </form>
                       </div>
